--- a/blog-3.html
+++ b/blog-3.html
@@ -72,48 +72,43 @@
 
 	<div id="fh5co-blog" class="no-padding-top">
 		<div class="container">
-			<div class="row animate-box">
-				<div class=" col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 text-center fh5co-heading">
-					<h2>My Blog</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-				</div>
-			</div>
 			<div class="row">
-				<div class="col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="blog-1.html" class="blog-bg" style="background-image: url(images/blog/strategy.jpeg);"></a>
+					<div class="fh5co-blog">
+						<a href="#" class="blog-bg" style="background-image: url(images/blog/brainstorming.png);"></a>
 						<div class="blog-text">
-							<h3><a href="blog-1.html">Strategy product plan</a></h3>
-							<p>Creating a roadmap is not the same as creating a good strategic plan for products.</p>
+							<h1><a href="blog-1">Brainstorming</a></h1>
+							<p>
+Using collaborative brainstorming tools is a key element when it comes to clarifying ideas and finding new sources of innovation, especially when a new product is being defined or a change of strategy is required in the current product.<br><br>
+There are several tools that facilitate this task in the market, these are some of them:<br>
+- <a href="https://www.mindmup.com/">MindMup</a><br>
+- <a href="https://www.mindomo.com/">Mindomo</a><br>
+- <a href="https://www.miro.com/">Miro</a><br>
+- <a href="https://www.jamboard.com/">Jamboard</a><br>
+- <a href="https://www.lucidchart.com/">Lucidchart</a><br>
+- <a href="https://www.lucidchart.com/">Lucidchart</a><br>
+- <a href="https://www.mural.com/">Mural</a><br>
+- <a href="https://www.mindmeister.com/">Mindmeister</a><br><br>
+Now that we have the tools we can start working with them, 
+let's give an example of how we can use brainstorming to 
+find the market value of our new product.<br>
+<h3>Problem to solve</h3>
+The first thing we have to know about our product is the reason for its existence, we find this by resolving the following question, What problem does my product solve?
+Be specific and detailed and add in this part of your brainstorming diagram which are specifically the problems list that currently exists for our future clients.<br><br>
+<h3>How to solve them</h3>
+Once we have the list of the problem we can specify on the other side of the diagram how we solve these problems, specifically on the list of each one we can detail how we are going to cover these problems.<br>.<br>
+
+<h3>Competitors</h3>
+Make a research of competitors for our future product in the market
+ and connect in the diagram for each problem how they are solving it or if there are not products in the market for this specific issue.<br>
+
+ Make sure you join and connect each point and add as many problemas/issues as necessary to make each point of the problem clear.<br><br>
+
+ <h3>Proposal value</h3>Now that we have all the points connected and we have a general, focused and clear visualization, we can create a new section for our value proposition.
+ We add a new diagram where we uncheck the list of solutions/functions that clearly propose our value proposition, setting us apart from the competition and offering a unique proposal with a clear purpose of meeting a need/s not covered by the actual products on the market.
+
+					</p>
 							<ul class="stuff">
 								<li><i class="icon-eye2"></i>1,098</li>
-								<li><a href="blog-1.html">Read More<i class="icon-arrow-right22"></i></a></li>
-							</ul>
-						</div> 
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="blog-2.html" class="blog-bg" style="background-image: url(images/blog/prioritizing-work.webp);"></a>
-						<div class="blog-text">
-							<h3><a href="blog-2.html">Prioritization</a></h3>
-							<p>Techniques to priorizes new features for your product. How to define relevance functionalities.</p>
-							<ul class="stuff">
-								<li><i class="icon-eye2"></i>2,722</li>
-								<li><a href="blog-2.html">Read More<i class="icon-arrow-right22"></i></a></li>
-							</ul>
-						</div> 
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="blog-3.html" class="blog-bg" style="background-image: url(images/blog/brainstorming.png);"></a>
-						<div class="blog-text">
-							<h3><a href="blog-3.html">Brainstorming</a></h3>
-							<p>Use first a brainstorming tool in order to clarify the value for your clients in your product.</p>
-							<ul class="stuff">
-								<li><i class="icon-eye2"></i>2,308</li>
-								<li><a href="blog-3.html">Read More<i class="icon-arrow-right22"></i></a></li>
 							</ul>
 						</div> 
 					</div>
