--- a/index.html
+++ b/index.html
@@ -60,15 +60,7 @@
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="portfolio.html">Portfolio</a></li>
 							<li><a href="about.html">About</a></li>
-							<li class="has-dropdown">
-								<a href="blog.html">Blog</a>
-								<ul class="dropdown">
-									<li><a href="#">Web Design</a></li>
-									<li><a href="#">eCommerce</a></li>
-									<li><a href="#">Branding</a></li>
-									<li><a href="#">API</a></li>
-								</ul>
-							</li>
+							<li><a href="blog.html">Blog</a></li>
 							<li><a href="index.html#fh5co-started">Contact</a></li>
 						</ul>
 					</div>
@@ -183,24 +175,23 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class=" col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 text-center fh5co-heading">
-					<h2>Wireframe Connects the Underlying Conceptual Structure</h2>
+					<h2>How I work</h2>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-5 animate-box">
 					<div class="user-frame">
-						<h3>Wireframe Connects the Underlying Conceptual Structure</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-						<span>Louie Jie Mahusay</span><br>
-						<small>CEO, Founder</small>
+						<h3>Transparency and clear vision</h3>
+						<p>"She is a dedicated and passionate professional with a very clear and confident vision of the product, which knows to transmit and motive in order to achieve the objectives of the platform."</p>
+						<span>Jeff Stevens</span><br>
+						<small>Product Manager, Pislow</small>
 					</div>
 				</div>
 				<div class="col-md-7 animate-box">
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-					<blockquote>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+					<p>I like to mix innovation and creativity in equal parts with logic and empirical processes. That's why when I work, the first thing I do is analyze the current product, the value proposed to customers, the mission of the platform and the competition. Once this is done, we can begin to design a product strategy that we can measure and track to see if the objectives are actually met.</p>
+					<p>MISSION: My mission is to be the VOC voice of the customer who empathizes with their challenges and articulates their needs to bring products to market they'll love, improving everyday lives.</p>
 					</blockquote>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+					<p>VISION: My vision for the future involves being a leading product management expert in the field through continuous experience, training, and community involvement.</p>
 				</div>
 			</div>
 		</div>
@@ -211,53 +202,52 @@
 			<div class="row">
 				<div class="col-md-6 animate-box">
 					<div class="heading">
-						<h2>Download Our Latest Free HTML5 Bootstrap Template</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
+						<h2>What I work</h2>
 					</div>
 				</div>
 				<div class="col-md-6 col-md-push-1 animate-box">
 					<aside id="fh5co-hero">
 					<div class="flexslider">
 						<ul class="slides">
-					   	<li style="background-image: url(images/img_bg_1.jpg);">
+					   	<li style="background-image: url(images/ld.jpeg);">
 					   		<div class="overlay-gradient"></div>
 					   		<div class="container-fluid">
 					   			<div class="row">
 						   			<div class="col-md-12 col-md-offset-0 col-md-pull-10 slider-text slider-text-bg">
 						   				<div class="slider-text-inner">
 						   					<div class="desc">
-													<h2>Air Free HTML5 Bootstrap Template</h2>
-													<p>Ink is a free html5 bootstrap and a multi-purpose template perfect for any type of websites. A combination of a minimal and modern design template. The features are big slider on homepage, smooth animation, product listing and many more</p>
+													<h2>Leadership</h2>
+													<p>I have led teams of up to 20 people, including team managers and external teams. I believe in horizontal organizations where leadership consists of guiding, motivating, helping, mentoring and streamlining, through transparency, communication and a shared vision of the product.</p>
 						   					</div>
 						   				</div>
 						   			</div>
 						   		</div>
 					   		</div>
 					   	</li>
-					   	<li style="background-image: url(images/img_bg_2.jpg);">
+					   	<li style="background-image: url(images/pm.jpg);">
 					   		<div class="overlay-gradient"></div>
 					   		<div class="container-fluid">
 					   			<div class="row">
 						   			<div class="col-md-12 col-md-offset-0 col-md-pull-10 slider-text slider-text-bg">
 						   				<div class="slider-text-inner">
 						   					<div class="desc">
-													<h2>Ink Free HTML5 Bootstrap Template</h2>
-													<p>Ink is a free html5 bootstrap and a multi-purpose template perfect for any type of websites. A combination of a minimal and modern design template. The features are big slider on homepage, smooth animation, product listing and many more</p>
+													<h2>Product management</h2>
+													<p>I have led and developed successful products for 8 years. Some of which are present in up to 7 different countries with up to 2M users. Including C2C or B2B platforms and participating in all phases of the product's life.</p>
 						   					</div>
 						   				</div>
 						   			</div>
 						   		</div>
 					   		</div>
 					   	</li>
-					   	<li style="background-image: url(images/img_bg_3.jpg);">
+					   	<li style="background-image: url(images/pjm.jpg);">
 					   		<div class="overlay-gradient"></div>
 					   		<div class="container-fluid">
 					   			<div class="row">
 						   			<div class="col-md-12 col-md-offset-0 col-md-pull-10 slider-text slider-text-bg">
 						   				<div class="slider-text-inner">
 						   					<div class="desc">
-													<h2>Travel Free HTML5 Bootstrap Template</h2>
-													<p>Ink is a free html5 bootstrap and a multi-purpose template perfect for any type of websites. A combination of a minimal and modern design template. The features are big slider on homepage, smooth animation, product listing and many more</p>
+													<h2>Project management</h2>
+													<p>I have managed large-scale projects for almost 10 years as an IT consultant, participating and leading in the gathering of requirements, the strategic project plan and its follow-up to achieve successful results in very complex international projects.</p>
 						   					</div>
 						   				</div>
 						   			</div>
@@ -277,51 +267,44 @@
 			<div class="row animate-box">
 				<div class=" col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 text-center fh5co-heading">
 					<h2>Recent Post</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/blog-1.jpg);"></a>
+						<a href="blog-1.html" class="blog-bg" style="background-image: url(images/blog/strategy.jpeg);"></a>
 						<div class="blog-text">
-							<span class="posted_on">Feb. 15th 2016</span>
-							<h3><a href="#">Photoshoot On The Street</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<h3><a href="blog-1.html">Strategy product plan</a></h3>
+							<p>Creating a roadmap is not the same as creating a good strategic plan for products.</p>
 							<ul class="stuff">
-								<li><i class="icon-heart2"></i>249</li>
-								<li><i class="icon-eye2"></i>1,308</li>
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
+								<li><i class="icon-eye2"></i>1,098</li>
+								<li><a href="blog-1.html">Read More<i class="icon-arrow-right22"></i></a></li>
 							</ul>
 						</div> 
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/blog-2.jpg);"></a>
+						<a href="blog-2.html" class="blog-bg" style="background-image: url(images/blog/prioritizing-work.webp);"></a>
 						<div class="blog-text">
-							<span class="posted_on">Feb. 15th 2016</span>
-							<h3><a href="#">Surfing at Philippines</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<h3><a href="blog-2.html">Prioritization</a></h3>
+							<p>Techniques to priorizes new features for your product. How to define relevance functionalities.</p>
 							<ul class="stuff">
-								<li><i class="icon-heart2"></i>249</li>
-								<li><i class="icon-eye2"></i>1,308</li>
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
+								<li><i class="icon-eye2"></i>2,722</li>
+								<li><a href="blog-2.html">Read More<i class="icon-arrow-right22"></i></a></li>
 							</ul>
 						</div> 
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/blog-3.jpg);"></a>
+						<a href="blog-3.html" class="blog-bg" style="background-image: url(images/blog/brainstorming.png);"></a>
 						<div class="blog-text">
-							<span class="posted_on">Feb. 15th 2016</span>
-							<h3><a href="#">Focus On Uderwater</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<h3><a href="blog-3.html">Brainstorming</a></h3>
+							<p>Use first a brainstorming tool in order to clarify the value for your clients in your product.</p>
 							<ul class="stuff">
-								<li><i class="icon-heart2"></i>249</li>
-								<li><i class="icon-eye2"></i>1,308</li>
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
+								<li><i class="icon-eye2"></i>2,308</li>
+								<li><a href="blog-3.html">Read More<i class="icon-arrow-right22"></i></a></li>
 							</ul>
 						</div> 
 					</div>
