--- a/portfolio.html
+++ b/portfolio.html
@@ -60,15 +60,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li class="active"><a href="portfolio.html">Portfolio</a></li>
 							<li><a href="about.html">About</a></li>
-							<li class="has-dropdown">
-								<a href="blog.html">Blog</a>
-								<ul class="dropdown">
-									<li><a href="#">Web Design</a></li>
-									<li><a href="#">eCommerce</a></li>
-									<li><a href="#">Branding</a></li>
-									<li><a href="#">API</a></li>
-								</ul>
-							</li>
+							<li><a href="blog.html">Blog</a></li>
 							<li><a href="index.html#fh5co-started">Contact</a></li>
 						</ul>
 					</div>
@@ -165,13 +157,13 @@
 				</div>
 
 				<div class="embed-responsive embed-responsive-16by9">
-					<iframe class="embed-responsive-item" src="https://youtu.be/EcVdUZ9IHow" allowfullscreen></iframe>
+					<iframe width="614" height="346" src="https://www.youtube.com/embed/C1fINyBdMoQ" title="Teambook  Project Resource Planning Software" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				  </div>
 				<div>
 					<p><br>
 						
-					Collaborating in the new version of the whole platform without be updated in 8 years. Defining and developing the new improved UI/UX and the related features.</p>
-					<p><a href="https://www.teambookapp.com" Target="_blank" style="text-decoration: none;" >Learn More <i class="icon-arrow-right22"></i></a></p>
+					Collaborating in the new version of the whole platform. Analyzing the previous UI/UX and defining the new strategy and roadmap for delivery the new version.</p>
+					<p><a href="https://www.youtube.com/watch?v=EcVdUZ9IHow" Target="_blank" style="text-decoration: none;" >Learn More <i class="icon-arrow-right22"></i></a></p>
 				</div>
 				<div>
 					<img class="img-fluid" src="images/IT Job Presentation.png">
