--- a/contact.html
+++ b/contact.html
@@ -59,15 +59,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="portfolio.html">Portfolio</a></li>
 							<li><a href="about.html">About</a></li>
-							<li class="has-dropdown">
-								<a href="blog.html">Blog</a>
-								<ul class="dropdown">
-									<li><a href="#">Web Design</a></li>
-									<li><a href="#">eCommerce</a></li>
-									<li><a href="#">Branding</a></li>
-									<li><a href="#">API</a></li>
-								</ul>
-							</li>
+							<li><a href="blog.html">Blog</a></li>
 							<li class="active"><a href="index.html#fh5co-started">Contact</a></li>
 						</ul>
 					</div>
