--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
 				<div class="row">
 					<div class="col-md-4 animate-box">
 						<div class="feature-left">
-							<div class="feature-copy">
+							<div class="feature-copy noicon">
 								<h3>CPO/CTO <span style="font-size: initial">
 					2021- 2022</span></h3>
 								<p>Micolet & Micobooks are a secondhand fashion and books marketplaces present in 7 countries with almost 2M of users.</p>
@@ -114,7 +114,7 @@
 
 					<div class="col-md-4 animate-box">
 						<div class="feature-left">
-							<div class="feature-copy">
+							<div class="feature-copy noicon">
 								<h3>Founder/CPO/CTO <span style="font-size: initial">
 					2015- 2021</span></h3>
 								<p>Pislow is a  fashion renting marketplace for brands. Getting to incorporate well-known and big brands such as <a href="www.tous.com">TOUS</a> or <a href="www.escada.com">ESCADA</a>.</p>
@@ -125,7 +125,7 @@
 
 					<div class="col-md-4 animate-box">
 						<div class="feature-left">
-							<div class="feature-copy">
+							<div class="feature-copy noicon">
 								<h3>Senior product manager <span style="font-size: initial">
 					2019</span></h3>
 								<p>Teambook is a management planning tool B2B where I collaborated in the new version the platform.</p>
@@ -139,7 +139,7 @@
 				<div class="row">
 					<div class="col-md-4 animate-box">
 						<div class="feature-left">
-							<div class="feature-copy">
+							<div class="feature-copy noicon">
 								<h3>Service delivery manager <span style="font-size: initial">
 					2012- 2015</span></h3>
 								<p>Puig. Lead from the IT corporate department the implementation and development of HR corporate projects (+15 branches worldwide).</p>
@@ -150,7 +150,7 @@
 
 					<div class="col-md-4 animate-box">
 						<div class="feature-left">
-							<div class="feature-copy">
+							<div class="feature-copy noicon">
 								<h3>IT Manager consultant<span style="font-size: initial">
 					2010- 2012</span></h3>
 								<p>SAP HCM Implementation and application maintenance. Customers: ADP Barcelona, Alstom, Decathlon, Grupo Vocento.</p>
@@ -161,7 +161,7 @@
 
 					<div class="col-md-4 animate-box">
 						<div class="feature-left">
-							<div class="feature-copy">
+							<div class="feature-copy noicon">
 								<h3>IT Senior Consultant <span style="font-size: initial">
 					2007- 2010</span></h3>
 								<p>Accenture is considered the largest consulting firm in the world by number of employees. I was developing the SAP HR implementton in La Caixa.</p>
